--- a/leili.bib
+++ b/leili.bib
@@ -1,3 +1,114 @@
+@InProceedings{ouyang2025cmus,
+  author       = {Ouyang, Siqi and Xu, Xi and Li, Lei},
+  booktitle    = {Proceedings of the 22nd International Conference on Spoken Language Translation (IWSLT 2025)},
+  title        = {{CMU}{'}s {IWSLT} 2025 Simultaneous Speech Translation System},
+  year         = {2025},
+  month        = jul,
+  pages        = {309--314},
+  abstract     = {This paper presents CMU{'}s submission to the IWSLT 2025 Simultaneous Speech Translation (SST) task for translating unsegmented English speech into Chinese and German text in a streaming manner. Our end-to-end speech-to-text system integrates a chunkwise causal Wav2Vec 2.0 speech encoder, an adapter, and the Qwen2.5-7B-Instruct as the decoder. We use a two-stage simultaneous training procedure on robust speech segments synthesized from LibriSpeech, CommonVoice, and VoxPopuli datasets, utilizing standard cross-entropy loss. Our model supports adjustable latency through a configurable latency multiplier. Experimental results demonstrate that our system achieves 44.3 BLEU for English-to-Chinese and 25.1 BLEU for English-to-German translations on the ACL60/60 development set, with computation-aware latencies of 2.7 seconds and 2.3 seconds, and theoretical latencies of 2.2 and 1.7 seconds, respectively.},
+  entrysubtype = {workshop},
+  url       = {https://aclanthology.org/2025.iwslt-1.31/},
+}
+
+
+@InProceedings{zhao-etal-2025-efficiently,
+  author   = {Xuandong Zhao and Chenwen Liao and Yu-Xiang Wang and Lei Li},
+  booktitle = {the 63rd Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title    = {Efficiently Identifying Watermarked Segments in Mixed-Source Texts},
+  year     = {2025},
+  month     = jul,
+  abstract = {Text watermarks in large language models (LLMs) are increasingly used to detect synthetic text, mitigating misuse cases like fake news and academic dishonesty. While existing watermarking detection techniques primarily focus on classifying entire documents as watermarked or not, they often neglect the common scenario of identifying individual watermark segments within longer, mixed-source documents. Drawing inspiration from plagiarism detection systems, we propose two novel methods for partial watermark detection. First, we develop a geometry cover detection framework aimed at determining whether there is a watermark segment in long text. Second, we introduce an adaptive online learning algorithm to pinpoint the precise location of watermark segments within the text. Evaluated on three popular watermarking techniques (KGW-Watermark, Unigram-Watermark, and Gumbel-Watermark), our approach achieves high accuracy, significantly outperforming baseline methods. Moreover, our framework is adaptable to other watermarking techniques, offering new insights for precise watermark detection.},
+  code     = {https://github.com/XuandongZhao/llm-watermark-location},
+  url   = {https://aclanthology.org/2025.acl-long.316/},
+}
+
+@InProceedings{ouyang-etal-2025-infinisst,
+  author    = {Siqi Ouyang and Xi Xu and Lei Li},
+  booktitle = {the 63rd Annual Meeting of the Association for Computational Linguistics - Findings (ACL-Findings)},
+  title     = {InfiniSST: Simultaneous Translation of Unbounded Speech with Large Language Model},
+  year      = {2025},
+  month     = jul,
+  abstract  = {"Simultaneous translation of unbounded streaming speech remains a challenging problem due to the need for effectively processing the historical speech context and past translations so that quality and latency, including computation overhead, can be balanced. Most prior works assume pre-segmented speech, limiting their real-world applicability. In this paper, we propose InfiniSST, a novel approach that formulates SST as a multi-turn dialogue task, enabling seamless translation of unbounded speech. We construct translation trajectories and robust segments from MuST-C with multi-latency augmentation during training and develop a key-value (KV) cache management strategy to facilitate efficient inference. Experiments on MuST-C En-Es, En-De, and En-Zh demonstrate that InfiniSST reduces computation-aware latency by 0.5 to 1 second while maintaining the same translation quality compared to baselines. Ablation studies further validate the contributions of our data construction and cache management strategy. Code is released at https://github.com/LeiLiLab/InfiniSST."},
+  url    = {https://aclanthology.org/2025.findings-acl.157/},
+}
+
+@InProceedings{yuan-etal-2025-legomt2,
+  author    = {Fei Yuan and Yinquan Lu and Lei Li and Jingjing Xu},
+  booktitle = {the 63rd Annual Meeting of the Association for Computational Linguistics - Findings (ACL-Findings)},
+  title     = {LegoMT2: Selective Asynchronous Sharded Data Parallel Training for Massive Neural Machine Translation},
+  year      = {2025},
+  month     = jul,
+  abstract  = {"It is a critical challenge to learn a single model for massive languages. Prior methods focus on increasing the model size and training data size. However, large models are difficult to optimize efficiently even with distributed parallel training and translation capacity can interfere among languages. To address the challenge, we propose LegoMT2, an efficient training approach with an asymmetric multi-way model architecture for massive multilingual neural machine translation. LegoMT2 shards 435 languages into 8 language-centric groups and attributes one local encoder for each group{'}s languages and a mix encoder-decoder for all languages. LegoMT2 trains the model through local data parallel and asynchronous distributed updating of parameters. LegoMT2 is 16.2$\times$ faster than the distributed training method for M2M-100-12B (which only for 100 languages) while improving the translation performance by an average of 2.2 BLEU on \textit{Flores-101}, especially performing better for low-resource languages ."},
+  url    = {https://aclanthology.org/2025.findings-acl.1200/},
+}
+
+
+@InProceedings{duarte2025disco,
+  author   = {André V. Duarte and Xuandong Zhao and Arlindo L. Oliveira and Lei Li},
+  booktitle = {Proceedings of the 42nd International Conference on Machine Learning (ICML)},
+  title    = {DIS-CO: Discovering Copyrighted Content in VLMs Training Data},
+  year     = {2025},
+  month     = jul,
+  abstract = {How can we verify whether copyrighted content was used to train a large vision-language model (VLM) without direct access to its training data? Motivated by the hypothesis that a VLM is able to recognize images from its training corpus, we propose DIS-CO, a novel approach to infer the inclusion of copyrighted content during the model's development. By repeatedly querying a VLM with specific frames from targeted copyrighted material, DIS-CO extracts the content's identity through free-form text completions. To assess its effectiveness, we introduce MovieTection, a benchmark comprising 14,000 frames paired with detailed captions, drawn from films released both before and after a model’s training cutoff. Our results show that DIS-CO significantly improves detection performance, nearly doubling the average AUC of the best prior method on models with logits available. Our findings also highlight a broader concern: all tested models appear to have been exposed to some extent to copyrighted content.},
+  code     = {https://github.com/avduarte333/DIS-CO},
+  eprint   = {https://arxiv.org/abs/2502.17358},
+}
+
+@InProceedings{zhao2025weaktostrongjailbreakinglargelanguage,
+  author   = {Xuandong Zhao and Xianjun Yang and Tianyu Pang and Chao Du and Lei Li and Yu-Xiang Wang and William Yang Wang},
+  booktitle = {Proceedings of the 42nd International Conference on Machine Learning (ICML)},
+  title    = {Weak-to-Strong Jailbreaking on Large Language Models},
+  year     = {2025},
+  month     = jul,
+  abstract = {Large language models (LLMs) are vulnerable to jailbreak attacks - resulting in harmful, unethical, or biased text generations. However, existing jailbreaking methods are computationally costly. In this paper, we propose the weak-to-strong jailbreaking attack, an efficient inference time attack for aligned LLMs to produce harmful text. Our key intuition is based on the observation that jailbroken and aligned models only differ in their initial decoding distributions. The weak-to-strong attack's key technical insight is using two smaller models (a safe and an unsafe one) to adversarially modify a significantly larger safe model's decoding probabilities. We evaluate the weak-to-strong attack on 5 diverse open-source LLMs from 3 organizations. The results show our method can increase the misalignment rate to over 99% on two datasets with just one forward pass per example. Our study exposes an urgent safety issue that needs to be addressed when aligning LLMs. As an initial attempt, we propose a defense strategy to protect against such attacks, but creating more advanced defenses remains challenging.},
+  code     = {https://github.com/XuandongZhao/weak-to-strong},
+  eprint   = {https://arxiv.org/abs/2401.17256},
+}
+
+@InProceedings{song2025ppdiffdiffusinghybridsequencestructure,
+  author   = {Zhenqiao Song and Tianxiao Li and Lei Li and Martin Renqiang},
+  booktitle = {Proceedings of the 42nd International Conference on Machine Learning (ICML)},
+  title    = {PPDiff: Diffusing in Hybrid Sequence-Structure Space for Protein-Protein Complex Design},
+  year     = {2025},
+  month     = jul,
+  abstract = {Designing protein-binding proteins with high affinity is critical in biomedical research and biotechnology. Despite recent advancements targeting specific proteins, the ability to create high-affinity binders for arbitrary protein targets on demand, without extensive rounds of wet-lab testing, remains a significant challenge. Here, we introduce PPDiff, a diffusion model to jointly design the sequence and structure of binders for arbitrary protein targets in a non-autoregressive manner. PPDiffbuilds upon our developed Sequence Structure Interleaving Network with Causal attention layers (SSINC), which integrates interleaved self-attention layers to capture global amino acid correlations, k-nearest neighbor (kNN) equivariant graph layers to model local interactions in three-dimensional (3D) space, and causal attention layers to simplify the intricate interdependencies within the protein sequence. To assess PPDiff, we curate PPBench, a general protein-protein complex dataset comprising 706,360 complexes from the Protein Data Bank (PDB). The model is pretrained on PPBenchand finetuned on two real-world applications: target-protein mini-binder complex design and antigen-antibody complex design. PPDiffconsistently surpasses baseline methods, achieving success rates of 50.00%, 23.16%, and 16.89% for the pretraining task and the two downstream applications, respectively.},
+  code     = {https://github.com/JocelynSong/PPDiff},
+  eprint   = {https://arxiv.org/abs/2506.11420},
+}
+
+
+
+@InProceedings{zhao2025sok,
+  author    = {Zhao, Xuandong and Gunn, Sam and Christ, Miranda and Fairoze, Jaiden and Fabrega, Andres and Carlini, Nicholas and Garg, Sanjam and Hong, Sanghyun and Nasr, Milad and Tramer, Florian and Jha, Somesh and Li, Lei and Wang, Yu-Xiang and Song, Dawn},
+  booktitle = {IEEE Symposium on Security and Privacy (SP)},
+  title     = {{SoK}: Watermarking for AI-Generated Content},
+  year      = {2025},
+  month     = May,
+  pages     = {2621-2639},
+  publisher = {IEEE Computer Society},
+  abstract  = {As the outputs of generative AI (GenAI) techniques improve in quality, it becomes increasingly challenging to distinguish them from human-created content. Watermarking schemes are a promising approach to address the problem of distinguishing between AI and human-generated content. These schemes embed hidden signals within AI-generated content to enable reliable detection. While watermarking is not a silver bullet for addressing all risks associated with GenAI, it can play a crucial role in enhancing AI safety and trustworthiness by combating misinformation and deception. This paper presents a comprehensive overview of watermarking techniques for GenAI, beginning with the need for watermarking from historical and regulatory perspectives. We formalize the definitions and desired properties of watermarking schemes and examine the key objectives and threat models for existing approaches. Practical evaluation strategies are also explored, providing insights into the development of robust watermarking techniques capable of resisting various attacks. Additionally, we review recent representative works, highlight open challenges, and discuss potential directions for this emerging field. By offering a thorough understanding of watermarking in GenAI, this work aims to guide researchers in advancing watermarking methods and applications, and support policymakers in addressing the broader implications of GenAI.},
+  doi       = {10.1109/SP61157.2025.00178},
+  eprint    = {https://arxiv.org/abs/2411.18479},
+  issn      = {2375-1207},
+  keywords  = {watermark,generative ai,authentication,large language model},
+  url       = {https://doi.ieeecomputersociety.org/10.1109/SP61157.2025.00178},
+}
+
+@Patent{feng2025advertisement,
+  nationality = {US},
+  number      = {12282940B2},
+  year        = {2025},
+  yearfiled   = {2021},
+  assignee    = {Beijing Youzhuju Network Tech Co.},
+  author      = {Jiangtao Feng and Han Li and Jiaze Chen and Yunbo Chen and Hao Zhou and Lei Li},
+  day         = {22},
+  dayfiled    = {29},
+  month       = apr,
+  monthfiled  = dec,
+  title       = {Advertisement Title Rewriting Method, Apparatus and Device, and Storage Medium},
+  type        = {patentus},
+}
+
 @InProceedings{wang2025typedthinker,
   author    = {Danqing Wang and Jianxin Ma and Fei Fang and Lei Li},
   booktitle = {International Conference on Learning Representations (ICLR)},
@@ -3059,14 +3170,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   eprint   = {https://www.biorxiv.org/content/10.1101/2025.01.06.631595},
 }
 
-@Unpublished{duartePreprintdis,
-  author   = {André V. Duarte and Xuandong Zhao and Arlindo L. Oliveira and Lei Li},
-  title    = {DIS-CO: Discovering Copyrighted Content in VLMs Training Data},
-  year     = {Preprint},
-  abstract = {How can we verify whether copyrighted content was used to train a large vision-language model (VLM) without direct access to its training data? Motivated by the hypothesis that a VLM is able to recognize images from its training corpus, we propose DIS-CO, a novel approach to infer the inclusion of copyrighted content during the model's development. By repeatedly querying a VLM with specific frames from targeted copyrighted material, DIS-CO extracts the content's identity through free-form text completions. To assess its effectiveness, we introduce MovieTection, a benchmark comprising 14,000 frames paired with detailed captions, drawn from films released both before and after a model’s training cutoff. Our results show that DIS-CO significantly improves detection performance, nearly doubling the average AUC of the best prior method on models with logits available. Our findings also highlight a broader concern: all tested models appear to have been exposed to some extent to copyrighted content.},
-  code     = {https://github.com/avduarte333/DIS-CO},
-  eprint   = {https://arxiv.org/abs/2502.17358},
-}
 
 @Unpublished{ouyangPreprintfasst,
   author   = {Siqi Ouyang and Xi Xu and Chinmay Dandekar and Lei Li},
@@ -3129,13 +3232,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   eprint = {https://arxiv.org/abs/1910.11301},
 }
 
-@Unpublished{zhaoPreprintefficiently,
-  author   = {Xuandong Zhao and Chenwen Liao and Yu-Xiang Wang and Lei Li},
-  title    = {Efficiently Identifying Watermarked Segments in Mixed-Source Texts},
-  year     = {Preprint},
-  abstract = {Text watermarks in large language models (LLMs) are increasingly used to detect synthetic text, mitigating misuse cases like fake news and academic dishonesty. While existing watermarking detection techniques primarily focus on classifying entire documents as watermarked or not, they often neglect the common scenario of identifying individual watermark segments within longer, mixed-source documents. Drawing inspiration from plagiarism detection systems, we propose two novel methods for partial watermark detection. First, we develop a geometry cover detection framework aimed at determining whether there is a watermark segment in long text. Second, we introduce an adaptive online learning algorithm to pinpoint the precise location of watermark segments within the text. Evaluated on three popular watermarking techniques (KGW-Watermark, Unigram-Watermark, and Gumbel-Watermark), our approach achieves high accuracy, significantly outperforming baseline methods. Moreover, our framework is adaptable to other watermarking techniques, offering new insights for precise watermark detection.},
-  eprint   = {https://arxiv.org/abs/2410.03600},
-}
 
 @Electronic{blog,
   language     = {Java},
